# half-life1_win32_722

./: .editorconfig  .gitignore  CMakeLists.txt  DeployPath.ini  PostBuild.bat  README.md  gitattributes.txt
a3dwrapper/: a3dwrapper.cpp  a3dwrapper.h
cl_dll/: CMakeLists.txt  MOTD.cpp  ammo.cpp  ammo.h  ammohistory.cpp  ammohistory.h  battery.cpp  cdll_int.cpp  cl_dll.h  cl_dll.mak  cl_dll.mdp  death.cpp  flashlight.cpp  geiger.cpp  health.cpp  health.h  hud.cpp  hud.h  hud_msg.cpp  hud_redraw.cpp  hud_update.cpp  message.cpp  parsemsg.cpp  parsemsg.h  saytext.cpp  scoreboard.cpp  train.cpp  util.cpp  util.h  util_vector.h
cmake/: Linux32CrossCompile.cmake
common/: a3d.h  cl_entity.h  clientid.h  const.h  crc.h  cvardef.h  d3d_structs.h  dll_state.h  exefuncs.h  gameinfo.h  platform.h  qfont.h  quakedef.h  r_efx.h  winsani_out.h
dlls/: CMakeLists.txt  activity.h  aflock.cpp  agrunt.cpp  airtank.cpp  animating.cpp  animation.cpp  animation.h  apache.cpp  barnacle.cpp  barney.cpp  basemonster.h  bigmomma.cpp  bloater.cpp  bmodels.cpp  bullsquid.cpp  buttons.cpp  cbase.cpp  cbase.h  cdll_dll.h  client.cpp  client.h  combat.cpp  controller.cpp  crossbow.cpp  crowbar.cpp  decals.h  defaultai.cpp  defaultai.h  doors.cpp  doors.h  effects.cpp  effects.h  egon.cpp  enginecallback.h  explode.cpp  explode.h  extdll.h  flyingmonster.cpp  flyingmonster.h  (+92 more)
dx6sdk/include/: dxmgr.h
dx6sdk/lib/: dxmgr.lib
engine/: CL_DEMO.C  CL_MAIN.C  CL_MAIN.c  CL_PARSE.C  CL_PARSE.c  CL_TENT.C  CL_TENT.c  CMakeLists.txt  CONSOLE.C  CONSOLE.H  CONSOLE.c  D_EDGE.C  D_FILL.C  D_INIT.C  D_MODECH.C  D_PART.C  D_POLYSE.C  D_SCAN.C  D_SPRITE.C  D_SURF.C  D_VARS.C  D_ZPOINT.C  GLQUAKE.H  GL_DRAW.C  GL_DRAW.c  GL_MESH.C  GL_MESH.c  GL_MODEL.C  GL_MODEL.H  GL_MODEL.c  GL_RMAIN.C  GL_RMISC.C  GL_RMISC.c  GL_RSURF.C  GL_RSURF.c  GL_VIDNT.C  GL_VIDNT_LINUX.c  GL_WARP.C  GL_WARP.c  HUD.c  (+198 more)
projects/vs2022/: HALF-LIFE-WON-722.sln  HL1 (NET TEST 1, 1998).sln  Half-Life (722 Build, 1998).sln  QUIVER_WIN32-722.sln  a3dwrapper.vcxproj  a3dwrapper.vcxproj.filters  cl_dll.vcxproj  cl_dll.vcxproj.filters  hl.vcxproj  hl.vcxproj.filters  hl_res.vcxproj  hl_res.vcxproj.filters  hw.vcxproj  hw.vcxproj.filters  quiver_win32_722.sln  sw.vcxproj  sw.vcxproj.filters  verifya3d.vcxproj  verifya3d.vcxproj.filters
projects/vs2022/hl/Debug - Address Sanitizer/: hl.dll.recipe
projects/vs_generic/: cl_dll.vcxproj  cl_dll.vcxproj.filters  hl.vcxproj  hw.vcxproj  hw.vcxproj.filters  sw.vcxproj  sw.vcxproj.filters
shell/hl_res/: RCb11308  hl_res.mak  hl_res.mdp  hl_res.rc  resource.h
shell/launcher/: CMakeLists.txt  dll_state.h  exefuncs.c  exefuncs.h  launcher.c  launcher.h  launcher_win.c  launcher_win.h  sys.c  sys.h  util.c  util.h
verifya3d/: verifya3d.cpp  verifya3d.h
